syntax = "proto3";

option csharp_namespace = "AuthentificationService";

package authService;

service AuthService{
	rpc Authentificate(AuthRequest) returns (AuthReply);
}

message AuthRequest{
	string username = 1;
	string password = 2;
}

message AuthReply{
	string token = 1;
}